==> tetrafolium/micropython/ports/rp2/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "extmod/virtpin.h"
#include "lib/utils/mpirq.h"
#include "modmachine.h"
#include "py/mphal.h"
#include "py/runtime.h"
#include "hardware/irq.h"
#include "hardware/regs/intctrl.h"
#include "hardware/structs/iobank0.h"
#include "hardware/structs/padsbank0.h"
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_MODE_ALT (3)
#define GPIO_PULL_UP (1)
#define GPIO_PULL_DOWN (2)
#define GPIO_IRQ_ALL (0xf)
#define GPIO_GET_FUNCSEL(id)                                                   \
  ((iobank0_hw->io[(id)].ctrl & IO_BANK0_GPIO0_CTRL_FUNCSEL_BITS) >>           \
   IO_BANK0_GPIO0_CTRL_FUNCSEL_LSB)
#define GPIO_IS_OUT(id) (sio_hw->gpio_oe & (1 << (id)))
#define GPIO_IS_PULL_UP(id) (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PUE_BITS)
#define GPIO_IS_PULL_DOWN(id)                                                  \
  (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PDE_BITS)
#define GPIO_IS_OPEN_DRAIN(id) (machine_pin_open_drain_mask & (1 << (id)))

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self,
                                            size_t n_args,
                                            const mp_obj_t *pos_args,
                                            mp_map_t *kw_args) {
  enum { ARG_mode, ARG_pull, ARG_value, ARG_alt };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_mode, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE}},
      {MP_QSTR_pull, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE}},
      {MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE}},
      {MP_QSTR_alt, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = GPIO_FUNC_SIO}},
  };

  // parse args
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args),
                   allowed_args, args);

  // set initial value (do this before configuring mode/pull)
  if (args[ARG_value].u_obj != mp_const_none) {
    gpio_put(self->id, mp_obj_is_true(args[ARG_value].u_obj));
  }

  // configure mode
  if (args[ARG_mode].u_obj != mp_const_none) {
    mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
    if (mode == GPIO_MODE_IN) {
      mp_hal_pin_input(self->id);
    } else if (mode == GPIO_MODE_OUT) {
      mp_hal_pin_output(self->id);
    } else if (mode == GPIO_MODE_OPEN_DRAIN) {
      mp_hal_pin_open_drain(self->id);
    } else {
      // Alternate function.
      gpio_set_function(self->id, args[ARG_alt].u_int);
      machine_pin_open_drain_mask &= ~(1 << self->id);
    }
  }

  // configure pull (unconditionally because None means no-pull)
  uint32_t pull = 0;
  if (args[ARG_pull].u_obj != mp_const_none) {
    pull = mp_obj_get_int(args[ARG_pull].u_obj);
  }
  gpio_set_pulls(self->id, pull & GPIO_PULL_UP, pull & GPIO_PULL_DOWN);

  return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw,
                                 const mp_obj_t *args) {
  mp_arg_check_num(n_args, n_kw, 0, 1, false);
  machine_pin_obj_t *self = self_in;
  if (n_args == 0) {
    // get pin
    return MP_OBJ_NEW_SMALL_INT(gpio_get(self->id));
  } else {
    // set pin
    bool value = mp_obj_is_true(args[0]);
    if (GPIO_IS_OPEN_DRAIN(self->id)) {
      MP_STATIC_ASSERT(GPIO_IN == 0 && GPIO_OUT == 1);
      gpio_set_dir(self->id, 1 - value);
    } else {
      gpio_put(self->id, value);
    }
    return mp_const_none;
  }
}

STATIC mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args,
                                mp_map_t *kw_args) {
  enum { ARG_handler, ARG_trigger, ARG_hard };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_handler, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE}},
      {MP_QSTR_trigger,
       MP_ARG_INT,
       {.u_int = GPIO_IRQ_EDGE_FALL | GPIO_IRQ_EDGE_RISE}},
      {MP_QSTR_hard, MP_ARG_BOOL, {.u_bool = false}},
  };
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args,
                   MP_ARRAY_SIZE(allowed_args), allowed_args, args);

  // Get the IRQ object.
  machine_pin_irq_obj_t *irq = MP_STATE_PORT(machine_pin_irq_obj[self->id]);

  // Allocate the IRQ object if it doesn't already exist.
  if (irq == NULL) {
    irq = m_new_obj(machine_pin_irq_obj_t);
    irq->base.base.type = &mp_irq_type;
    irq->base.methods = (mp_irq_methods_t *)&machine_pin_irq_methods;
    irq->base.parent = MP_OBJ_FROM_PTR(self);
    irq->base.handler = mp_const_none;
    irq->base.ishard = false;
    MP_STATE_PORT(machine_pin_irq_obj[self->id]) = irq;
  }

  if (n_args > 1 || kw_args->used != 0) {
    // Configure IRQ.

    // Disable all IRQs while data is updated.
    gpio_set_irq_enabled(self->id, GPIO_IRQ_ALL, false);

    // Update IRQ data.
    irq->base.handler = args[ARG_handler].u_obj;
    irq->base.ishard = args[ARG_hard].u_bool;
    irq->flags = 0;
    irq->trigger = args[ARG_trigger].u_int;

    // Enable IRQ if a handler is given.
    if (args[ARG_handler].u_obj != mp_const_none) {
      gpio_set_irq_enabled(self->id, args[ARG_trigger].u_int, true);
    }
  }

  return MP_OBJ_FROM_PTR(irq);
}

STATIC mp_uint_t pin_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg,
                           int *errcode) {
  (void)errcode;
  machine_pin_obj_t *self = self_in;

  switch (request) {
  case MP_PIN_READ: {
    return gpio_get(self->id);
  }
  case MP_PIN_WRITE: {
    gpio_put(self->id, arg);
    return 0;
  }
  }
  return -1;
}

STATIC mp_uint_t machine_pin_irq_trigger(mp_obj_t self_in,
                                         mp_uint_t new_trigger) {
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
  machine_pin_irq_obj_t *irq = MP_STATE_PORT(machine_pin_irq_obj[self->id]);
  gpio_set_irq_enabled(self->id, GPIO_IRQ_ALL, false);
  irq->flags = 0;
  irq->trigger = new_trigger;
  gpio_set_irq_enabled(self->id, new_trigger, true);
  return 0;
}
